--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,6 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/with_books.JPG");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("/images/with_books.JPG");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -116,7 +117,8 @@
 
 .u-section-3 .u-image-1 {
   min-height: 551px;
-  background-image: url("images/board.jpg");
+  background-image: url("/images/board.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-3 .u-container-layout-2 {
@@ -137,7 +139,6 @@
   }
 
   .u-section-3 .u-image-1 {
-    background-position: 50% 50%;
     min-height: 454px;
   }
 }
@@ -217,7 +218,8 @@
 
 .u-section-4 .u-image-1 {
   min-height: 903px;
-  background-image: url("images/fgfgfg4.jpg");
+  background-image: url("/images/fgfgfg4.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-4 .u-container-layout-1 {
@@ -347,7 +349,6 @@
   }
 
   .u-section-4 .u-image-1 {
-    background-position: 50% 50%;
     min-height: 634px;
   }
 
@@ -673,24 +674,17 @@
     margin-right: 8px;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 157px;
+  min-height: 227px;
+}
+
+.u-section-6 .u-text-1 {
+  font-weight: 400;
+  margin: 30px auto 0;
 }
 
 .u-section-6 .u-form-1 {
   width: 570px;
-  margin: 40px auto 60px;
-}
-
-.u-section-6 .u-form-group-1 {
-  width: 100%;
-}
-
-.u-section-6 .u-form-group-2 {
-  width: 100%;
-}
-
-.u-section-6 .u-form-group-3 {
-  width: 100%;
+  margin: 10px auto 60px;
 }
 
 @media (max-width: 767px) {
